--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :genre %><br>
     <%= f.text_field :genre %>
   </div>
+  <div>
+    <%= f.label :playlist_id %>
+    <%= f.collection_select(:playlist_id, Playlist.all, :id, :title, prompt:true) %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
