--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -20,6 +20,13 @@
         <td><%= song.album %></td>
         <td><%= song.time %></td>
         <td><%= song.genre %></td>
+        <td>
+          <% if song.playlist %>
+            <%= song.playlist.title %>
+          <% else %>
+            No Playlist 
+          <% end %>
+        </td>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
         <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
