--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,3 +18,9 @@
     <%= javascript_include_tag "application" %>
   </body>
 </html>
+!-->
+
+<%= stylesheet_link_tag "application" %> <%= javascript_include_tag "vendor/modernizr" %> <%= csrf_meta_tags %>
+<%= render "layouts/top_nav" %>
+<%= render 'layouts/messages' %> <%= yield %>
+<%= javascript_include_tag "application" %>
