--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -4,12 +4,10 @@
   <thead>
     <tr>
       <th>Title</th>
-      <!--
       <th>Artist</th>
       <th>Album</th>
       <th>Time</th>
       <th>Genre</th>
-      !-->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,12 +16,10 @@
     <% @songs.each do |song| %>
       <tr>
         <td><%= song.title %></td>
-        <!--
         <td><%= song.artist %></td>
         <td><%= song.album %></td>
         <td><%= song.time %></td>
         <td><%= song.genre %></td>
-        !-->
         <td>
           <% if song.playlist %>
             <%= song.playlist.title %>
@@ -33,7 +29,7 @@
         </td>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
-        <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Remove', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
