Songs show in playlists 'show'

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -5,5 +5,9 @@
   <%= @playlist.title %>
 </p>
 
+<% @playlist.songs.each do |song| %>
+Title: <%= song.title %><br />
+<% end %>
+
 <%= link_to 'Edit', edit_playlist_path(@playlist) %> |
 <%= link_to 'Back', playlists_path %>
