--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= song.time %></td>
         <td><%= song.genre %></td>
         <td>
-          <% if song.playlist %>
+          <% if song.playlists %>
             <%= song.playlist.title %>
           <% else %>
             No Playlist 
