--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,8 +6,11 @@
 
     <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
-    <%= stylesheet_link_tag    "application" %>
+    <%= stylesheet_link_tag "application" %> 
     <%= javascript_include_tag "vendor/modernizr" %>
+    <%= javascript_include_tag "//connect.soundcloud.com/sdk.js" %>
+    <%= render "layouts/top_nav" %>
+    <%= render 'layouts/messages' %>
     <%= csrf_meta_tags %>
   </head>
 
@@ -18,9 +20,3 @@
     <%= javascript_include_tag "application" %>
   </body>
 </html>
-!-->
-
-<%= stylesheet_link_tag "application" %> <%= javascript_include_tag "vendor/modernizr" %> <%= csrf_meta_tags %>
-<%= render "layouts/top_nav" %>
-<%= render 'layouts/messages' %> <%= yield %>
-<%= javascript_include_tag "application" %>
