--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -5,9 +5,15 @@
   <%= @playlist.title %>
 </p>
 
-<% @playlist.songs.each do |song| %>
-Title: <%= song.title %><br />
+<% if @playlist.songs.empty? %>
+No Songs!
+
+	<% else %>
+		<% @playlist.songs.each do |song| %>
+		Title: <%= song.title %><br />
+	<% end %>
 <% end %>
+
 
 <%= link_to 'Edit', edit_playlist_path(@playlist) %> |
 <%= link_to 'Back', playlists_path %>
