--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -25,5 +25,10 @@
   <%= @song.genre %>
 </p>
 
+<p>
+  <strong>Permalink:</strong>
+  <%= @song.genre %>
+</p>
+
 <%= link_to 'Edit', edit_song_path(@song) %> |
 <%= link_to 'Back', songs_path %>
