--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -15,8 +15,18 @@
 
     <ul class="right">
       <li class="divider"></li>
-      <li><%= link_to "Playlists", playlists_path %></a></li>
-      <li><%= link_to "All Songs", songs_path %></a></li>
+      <% if current_user %>
+        <li><%= link_to "Playlists", playlists_path %></a></li>
+        <li><%= link_to "All Songs", songs_path %></a></li>
+        <li class="divider"></li>
+        <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+        <li class="divider"></li>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete  %>
+      <% else %>
+        <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li class="divider"></li>
+        <li><%= link_to "Login", new_user_session_path  %></li>
+      <% end %>      
     </ul>
   </section>
 </nav>
