--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 <br></br>
 <h1 class="text-center">SoundFX</h1>
 <br></br>
-<h3 class="text-center">A Beautiful SoundCloud playlist maker.<h3>
+<h3 class="text-center">A Minimalist SoundCloud playlist maker.<h3>
 	<br></br>
 	<p class="text-center"><a href="playlists" class="button" >Make Playlist</a></p>
 
