--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -17,11 +17,10 @@
       <li class="divider"></li>
       <% if current_user %>
         <li><%= link_to "Playlists", playlists_path %></a></li>
-        <li><%= link_to "All Songs", songs_path %></a></li>
         <li class="divider"></li>
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li class="divider"></li>
-        <%= link_to "Logout", destroy_user_session_path, method: :delete  %>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete  %></li>
       <% else %>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
         <li class="divider"></li>
