--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -17,49 +17,6 @@
   </ul>
 </div>
 
+<div id="hidden" style="display: none;">
+  <input class="playlist_id" value = <%= @playlist.id %> >
 </div>
-<%= form_for([@playlist, @song]) do |f| %>
-  <% if @song.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@song.errors.count, "error") %> prohibited this song from being saved:</h2>
-
-      <ul>
-      <% @song.errors.full_messages.each do |message| %>
-        <li><%= message %></li> 
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="required_field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="required_field">
-    <%= f.label :artist %><br>
-    <%= f.text_field :artist %>
-  </div>
-  <div class="field">
-    <%= f.label :album %><br>
-    <%= f.text_field :album %>
-  </div>
-  <div class="field">
-    <%= f.label :time %><br>
-    <%= f.text_field :time %>
-  </div>
-  <div class="field">
-    <%= f.label :genre %><br>
-    <%= f.text_field :genre %>
-  </div>
-  <div class="required_field">
-    <%= f.label :soundcloud_id %><br>
-    <%= f.text_field :soundcloud_id %>
-  </div>
-  <div class="required_field">
-    <%= f.label :soundcloud_permalink %><br>
-    <%= f.text_field :soundcloud_permalink %>
-  </div>
-  <div class="actions">
-    <%= f.submit("Create Song", id: 'submit') %>
-  </div>
-<% end %>
