--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,6 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<p>
+<div class="row">
+  <ul id="soundcloud-results">
+    
+  </ul>
+</div>
+
+<!-- <p>
   <strong>Title:</strong>
   <%= @playlist.title %>
 </p>
@@ -12,13 +18,7 @@ No Songs!
 	<% @playlist.songs.each do |song| %>
 		Title: <%= song.title %><br />
 	<% end %>
-<% end %>
-
-<div class="row">
-  <ul id="soundcloud-results-pl">
-    
-  </ul>
-</div>
+<% end %> -->
 
 <ol id="hidden" style="display: none;">
 	<% @playlist.songs.each do |song| %>
