Made it look sexy, added song play on show page, changed welcome page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,3 +25,44 @@ li.player-list-item {
 .player-list-item .td.player .buy-link {
   display:none;
 }  
+
+h1 {
+	text-align: center !important;
+
+}
+
+h2 {
+	text-align: center !important;
+
+}
+
+h3 {
+	text-align: center !important;
+
+}
+
+p {
+	text-align: center !important;
+
+}
+
+div a {
+	text-align: center !important;
+}
+
+.alert-box {
+	position: absolute;
+    left: 39%;
+    text-align: center !important;
+	width: 300px;
+}
+
+.myHeading{
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.buy-link {
+  display:none;
+}  
+
