--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,6 +1,13 @@
+<br></br>
+<br></br>
+<br></br>
 <h1>Editing playlist</h1>
-
+<br></br>
 <%= render 'form' %>
 
+<br></br>
+<div class="text-center">
 <%= link_to 'Show', @playlist %> |
 <%= link_to 'Back', playlists_path %>
+</div>
+<br></br>
