--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,5 +1,8 @@
+<br></br>
+<br></br>
+<br></br>
 <div class="row">
-  <div class="small-12 large-6 columns">
+  <div class="small-12 large-6 columns small-centered">
     <div class="row collapse field">
       <div class="small-10 columns">
         <input type="text" id="soundcloud-search" placeholder="Search Soundcloud">
