--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,5 +1,10 @@
+<br></br>
+<br></br>
+<br></br>
 <h1>New playlist</h1>
 
 <%= render 'form' %>
 
+<div class="text-center">
 <%= link_to 'Back', playlists_path %>
+</div>
