--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,4 +1,8 @@
+<br></br>
+<br></br>
+<br></br>
 <h1>Editing song</h1>
+<br></br>
 
 </div>
 <%= form_for([@playlist, @song]) do |f| %>
@@ -14,39 +18,50 @@
     </div>
   <% end %>
 
+<div class="row">
+  <div class="small-centered columns">
+
+<div class="text-center">
   <div class="required_field">
-    <%= f.label :title %><br>
+    <%= f.label :title , :class => 'myHeading' %><br>
     <%= f.text_field :title %>
   </div>
   <div class="required_field">
-    <%= f.label :artist %><br>
+    <%= f.label :artist , :class => 'myHeading' %><br>
     <%= f.text_field :artist %>
   </div>
   <div class="field">
-    <%= f.label :album %><br>
+    <%= f.label :album , :class => 'myHeading' %><br>
     <%= f.text_field :album %>
   </div>
   <div class="field">
-    <%= f.label :time %><br>
+    <%= f.label :time , :class => 'myHeading' %><br>
     <%= f.text_field :time %>
   </div>
   <div class="field">
-    <%= f.label :genre %><br>
+    <%= f.label :genre , :class => 'myHeading' %><br>
     <%= f.text_field :genre %>
   </div>
   <div class="required_field">
-    <%= f.label :soundcloud_id %><br>
+    <%= f.label :soundcloud_id , :class => 'myHeading' %><br>
     <%= f.text_field :soundcloud_id %>
   </div>
   <div class="required_field">
-    <%= f.label :soundcloud_permalink %><br>
+    <%= f.label :soundcloud_permalink , :class => 'myHeading' %><br>
     <%= f.text_field :soundcloud_permalink %>
   </div>
+  <br></br>
   <div class="actions">
-    <%= f.submit("Create Song", id: 'submit') %>
+    <%= f.submit(id: 'submit', :class => 'button [small small small]') %>
   </div>
+</div>
+</div>
+</div>
 <% end %>
+<br></br>
 
-
+<div class="text-center">
 <%= link_to 'Show', playlist_song_path(@playlist, @song) %> |
 <%= link_to 'Back', playlist_songs_path %>
+</div>
+<br></br>
