--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Listing songs</h1>
+<br></br>
+<br></br>
+<br></br>
+<h1>Songs in <%= @playlist.title %></h1>
+<br></br>
+
+<div class="row">
+  <div class="large-centered columns">
 
 <table>
   <thead>
@@ -8,7 +15,7 @@
       <th>Album</th>
       <th>Time</th>
       <th>Genre</th>
-      <th>Playlist</th>
+      <!-- <th>Playlist</th> -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,21 +28,28 @@
         <td><%= song.album %></td>
         <td><%= song.time %></td>
         <td><%= song.genre %></td>
-        <td>
+        <!-- <td>
           <% if song.playlist %>
             <%= song.playlist.title %>
           <% else %>
             No Playlist 
           <% end %>
-        </td>
-        <td><%= link_to 'Show', playlist_song_path(@playlist, song) %></td>
+        </td> -->
+        <td><%= link_to 'Play', playlist_song_path(@playlist, song) %></td>
         <td><%= link_to 'Edit', edit_playlist_song_path(@playlist, song) %></td>
-        <td><%= link_to 'Destroy', playlist_song_path(@playlist, song), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', playlist_song_path(@playlist, song), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
+</div>
+</div>
+
 <br>
 
-<%= link_to 'New Song', new_playlist_song_path(@playlist) %>
+<div class="text-center">
+<%= link_to 'New Song', new_playlist_song_path(@playlist) %> |
+<%= link_to 'Back', playlist_path(@playlist) %>
+</div>
+<br></br>
