--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,12 @@
+<br></br>
+<br></br>
+<br></br>
 <h1>New song</h1>
 
 <%= render 'form' %>
-
+<br></br>
+<br></br>
+<div class="text-center">
 <%= link_to 'Back', playlist_songs_path %>
+</div>
+
