--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,6 +1,19 @@
+<br></br>
+<br></br>
+<br></br>
+<head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+</head>
+
 <p id="notice"><%= notice %></p>
 
-<p>
+<div class="row">
+  <ul id="soundcloud-results">
+    
+  </ul>
+</div>
+
+<!-- <p>
   <strong>Title:</strong>
   <%= @song.title %>
 </p>
@@ -27,8 +40,87 @@
 
 <p>
   <strong>Permalink:</strong>
-  <%= @song.genre %>
-</p>
+  <%= @song.soundcloud_permalink %>
+</p> -->
 
+<div id="hidden" style="display: none;">
+  <input id="url" value = <%= @song.soundcloud_permalink %> >
+</div>
+
+<script>
+
+(function() {
+        var script = document.createElement("script");
+
+        script.type = "text/javascript";
+        script.async = true;
+        script.src = "//sd.toneden.io/production/toneden.loader.js"
+
+        var entry = document.getElementsByTagName("script")[0];
+        entry.parentNode.insertBefore(script, entry);
+    }());
+
+    ToneDenReady = window.ToneDenReady || [];
+    ToneDenReady.push(function() {
+        // call SDK functions (ToneDen.player.create(), etc.)
+    });
+
+  // Grab the container div
+  var container = $('#soundcloud-results');
+        
+  // Remove any previous results
+  container.empty();
+
+  // Create a list item to hold our players
+  var list_item = $('<li>').addClass('player-list-item');
+
+  container.append(list_item);
+
+//console.log(document.getElementById("url").value);
+// Create our player and add it to the page
+addPlayer(container, document.getElementById("url").value);
+
+function addPlayer(domEle, link) {
+
+  //console.log("player added");
+  ToneDen.player.create({
+    dom: domEle,
+    single: true,
+    mini: true,
+    urls: [
+      link
+    ],
+    //onTrackFinished: playNext(),
+  });
+
+  // This is a bit hacky, but ToneDen doesn't give us a DOMReady event
+  // And the trackReady event doesn't fire if the track fails to load
+  var interval = setInterval(function() {
+    var playlist_link = $('.follow-link', domEle);
+    if (playlist_link.length === 0) {
+      return;
+    }
+    else {
+      clearInterval(interval);
+    }
+    // Hijack the "follow" link to use our playlist functionality instead
+    //playlist_link.text('ADD TO PLAYLIST').attr('href', 'javascript:;').attr('target', '');
+
+    // Make sure the playlist link takes up the full available space
+    playlist_link.parent().removeClass('tdlarge-6').addClass('tdlarge-12');
+
+
+    // Add our own event handler (and remove the default one)
+    //playlist_link.off('click').click(addToPlaylist);
+  }, 200);
+}
+
+
+</script>
+<br></br>
+<br></br>
+
+<div class="text-center">
 <%= link_to 'Edit', edit_playlist_song_path(@playlist, @song) %> |
 <%= link_to 'Back', playlist_songs_path %>
+</div>
