--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,15 @@
-
 <br></br>
 <br></br>
 <br></br>
-<h1 class="text-center">SoundFX</h1>
+<h1>SoundFX</h1>
 <br></br>
-<h3 class="text-center">A Minimalist SoundCloud playlist maker.<h3>
+<h3>A Minimalist SoundCloud playlist maker.<h3>
 	<br></br>
-	<p class="text-center"><a href="playlists" class="button" >Make Playlist</a></p>
-
+	<% if user_signed_in? %>
+		<a href="playlists" class="button" >Make Playlist</a>
+	<% else %>
+		<a href="users/sign_up" class="button" >Sign Up</a>
+		<br>
+		<a href="users/sign_in" class="button [small small small]" >Login</a>
+	<% end %>
+<br></br>
