changed time to dur, did conversion

--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -35,8 +35,8 @@
     <%= f.text_field :album %>
   </div>
   <div class="field">
-    <%= f.label :time , :class => 'myHeading' %><br>
-    <%= f.text_field :time %>
+    <%= f.label :duration , :class => 'myHeading' %><br>
+    <%= f.text_field :duration %>
   </div>
   <div class="field">
     <%= f.label :genre , :class => 'myHeading' %><br>
