--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,7 @@
 <br></br>
 <br></br>
 <br></br>
-<h1>Songs in <%= @playlist.title %></h1>
+<h2>Songs in <%= @playlist.title %></h2>
 <br></br>
 
 <div class="row">
@@ -13,7 +13,7 @@
       <th>Title</th>
       <th>Artist</th>
       <th>Album</th>
-      <th>Time</th>
+      <th>Duration</th>
       <th>Genre</th>
       <!-- <th>Playlist</th> -->
       <th colspan="3"></th>
@@ -26,7 +26,7 @@
         <td><%= song.title %></td>
         <td><%= song.artist %></td>
         <td><%= song.album %></td>
-        <td><%= song.time %></td>
+        <td><%= song.duration %></td>
         <td><%= song.genre %></td>
         <!-- <td>
           <% if song.playlist %>
