--- a/app/views/playlists/_form.html.erb
+++ b/app/views/playlists/_form.html.erb
@@ -1,6 +1,4 @@
 <br></br>
-<br></br>
-<br></br>
 <%= form_for(@playlist) do |f| %>
   <% if @playlist.errors.any? %>
     <div id="error_explanation">
@@ -17,16 +15,16 @@
 <div class="row">
   <div class="small-centered columns">
 
-<div class="text-center">
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="actions">
+
+<div class="field">
+  <%= f.label :title , :class => 'myHeading' %><br>
+  <%= f.text_field :title %>
+</div>
+<br></br>
+  <div class="text-center">
+    <div class="actions">
     <%= f.submit(:class => 'button [small small small]') %>
   </div>
 </div>
 </div>
-</div>
-<br></br>
 <% end %>
