--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,12 +1,12 @@
 <br></br>
 <br></br>
-<br></br>
 <h2>Your Playlists</h2>
 
-<br></br>
+<p> Create or Edit a Playlist to Add Songs from SoundCloud</p>
+
+<br>
 <div class="row">
   <div class="small-3 large-centered columns">
-
 <table>
   <thead>
     <tr>
