--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,10 +1,12 @@
 <br></br>
 <br></br>
 <br></br>
-<h1>New playlist</h1>
-
-<%= render 'form' %>
-
+<h2>New Playlist</h2>
 <div class="text-center">
 <%= link_to 'Back', playlists_path %>
 </div>
+
+<%= render 'form' %>
+
+
+<br></br>
