--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,14 @@
 <br></br>
 <br></br>
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+<div class="text-center">
+  <%= link_to "Back", :back %>
+</div>
+
 <br></br>
 
-<div class="row text-center">
-  <div class="large-centered columns">
+<div class="row large-centered columns">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -26,14 +30,13 @@
     <%= f.password_field :current_password, autocomplete: "off" %></div>
   <br></br>
 
-  <div><%= f.submit("Update", :class => 'button [small small small]') %></div>
+  <div class="text-center"><%= f.submit("Update", :class => 'button [tiny small large]') %></div>
 <% end %>
 
-<br></br>
-<p class="myHeading">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :class => 'button [tiny tiny tiny]', data: { confirm: "Are you sure?" }, method: :delete %></p>
+<br>
+<div class="text-center myHeading"><%= button_to "Deactivate Account", registration_path(resource_name), :class => 'button [tiny tiny tiny]', data: { confirm: "Are you sure?" }, method: :delete %></div>
 
-<%= link_to "Back", :back %>
+
 <br></br>
 
-</div>
 </div>
