--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,13 +1,12 @@
 <br></br>
 <br></br>
-<br></br>
-<h1>Editing playlist</h1>
-<br></br>
-<%= render 'form' %>
-
-<br></br>
+<h2>Editing Playlist <%= @playlist.title %></h2>
 <div class="text-center">
 <%= link_to 'Show', @playlist %> |
 <%= link_to 'Back', playlists_path %>
 </div>
+<%= render 'form' %>
+
+<br></br>
+
 <br></br>
