--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,9 +1,22 @@
 <p id="notice"><%= notice %></p>
 
+
+
 <br></br>
 
+<h2><%= @playlist.title %></h2>
+
+<div class="text-center">
+<%= link_to "View Songs", playlist_songs_path(@playlist) %> |
+<%= link_to "Add Songs", new_playlist_song_path(@playlist) %> |
+<%= link_to 'Edit', edit_playlist_path(@playlist) %> |
+<%= link_to 'Back', playlists_path %>
+</div>
+
+<br></br>
 <% if @playlist.songs.empty? %>
 	<div class="text-center">No Songs!</div>
+	<br>
 <% end %>
 
 <div class="row">
@@ -32,13 +45,10 @@ No Songs!
 			<input type="text" value = <%= song.soundcloud_permalink %> >
 		</li>
 	<% end %>
+	<li class="playlist_id">
+		<input type="text" value = <%= @playlist.id %> >
+	</li>
 </ol>
 <br></br>
 
-<div class="text-center">
-<%= link_to "View Songs", playlist_songs_path(@playlist) %> |
-<%= link_to "Add Songs", new_playlist_song_path(@playlist) %> |
-<%= link_to 'Edit', edit_playlist_path(@playlist) %> |
-<%= link_to 'Back', playlists_path %>
-</div>
-<br></br>
+
