added shuffling, fixed playling playlist, attempt to killing toneden

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -25,6 +25,10 @@
   </ul>
 </div>
 
+<div class="text-center">
+	<a class="button" id="shuffle-button">Shuffle!</a>
+</div>
+
 <!-- <p>
   <strong>Title:</strong>
   <%= @playlist.title %>
